--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
+    "expo-blur": "^13.0.2",
+    "expo-document-picker": "^12.0.2",
+    "expo-image-picker": "^15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-localization": "~15.0.3",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
