--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "expo-linear-gradient": "^13.0.2",
     "expo-localization": "~15.0.3",
     "expo-location": "^17.0.1",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0"
   },
   "devDependencies": {
