--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
+    "lottie-react-native": "^7.0.0",
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
