--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~51.0.28",
     "expo-av": "^14.0.7",
     "expo-blur": "^13.0.2",
+    "expo-device": "~6.0.2",
     "expo-document-picker": "^12.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
@@ -36,6 +37,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.18.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -43,10 +45,11 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
-    "expo-device": "~6.0.2"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/leaflet": "^1.9.14",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
