--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-picker/picker": "2.7.5",
@@ -32,7 +33,9 @@
     "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
+    "laravel-echo": "^1.16.1",
     "lottie-react-native": "^7.0.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
@@ -52,6 +55,7 @@
     "@babel/core": "^7.20.0",
     "@types/leaflet": "^1.9.14",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.1.3"
   },
   "private": true
