--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-av": "^14.0.7",
     "expo-blur": "^13.0.2",
     "expo-device": "~6.0.2",
@@ -29,19 +29,18 @@
     "expo-localization": "~15.0.3",
     "expo-location": "^17.0.1",
     "expo-notifications": "~0.28.19",
-    "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "^0.27.6",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
     "laravel-echo": "^1.16.1",
-    "lottie-react-native": "^7.0.0",
+    "lottie-react-native": "6.7.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.18.2",
+    "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -56,7 +55,7 @@
     "@types/leaflet": "^1.9.14",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
