--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "expo-blur": "^13.0.2",
     "expo-device": "~6.0.2",
     "expo-document-picker": "^12.0.2",
-    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-localization": "~15.0.3",
     "expo-location": "^17.0.1",
@@ -49,7 +48,8 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
