--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
