--- a/app.json
+++ b/app.json
@@ -13,6 +13,9 @@
     },
     "ios": {
       "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyDAg_p9J7FQfFC0zm-Ed_Z9sAAn2uHUxlI"
+      },
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to allow you to share images in the chat.",
         "NSCameraUsageDescription": "This app needs access to your camera to allow you to take photos and share them in the chat.",
@@ -25,6 +28,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDAg_p9J7FQfFC0zm-Ed_Z9sAAn2uHUxlI"
+        }
       },
       "package": "ma.fauconbleu.services",
       "permissions": [
