--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-localization": "~15.0.3",
-    "expo-location": "^17.0.1",
+    "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.19",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
     "laravel-echo": "^1.16.1",
     "lottie-react-native": "6.7.0",
+    "mapbox-gl": "^2.15.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
@@ -43,14 +44,14 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-webview": "13.8.6",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
