--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "react-native-screens": "3.31.1",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "victory-native": "^37.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
