--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-svg": "^15.2.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "13.8.6",
-    "victory-native": "^37.3.3"
+    "victory-native": "^37.3.3",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
