--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "13.8.6",
     "victory-native": "^37.3.3",
-    "expo-sharing": "~12.0.1"
+    "expo-sharing": "~12.0.1",
+    "expo-haptics": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
