--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "expo-blur": "^13.0.2",
     "expo-device": "~6.0.2",
     "expo-document-picker": "^12.0.2",
+    "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-localization": "~15.0.3",
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.19",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "i18n-js": "^4.4.3",
@@ -40,6 +42,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
+    "react-native-blob-util": "^0.21.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -53,9 +56,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "13.8.6",
-    "victory-native": "^37.3.3",
-    "expo-sharing": "~12.0.1",
-    "expo-haptics": "~13.0.1"
+    "victory-native": "^37.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
