--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "^21.3.0",
@@ -22,7 +22,6 @@
     "date-fns": "^4.1.0",
     "expo": "~51.0.39",
     "expo-av": "^14.0.7",
-    "expo-blur": "^13.0.2",
     "expo-device": "~6.0.2",
     "expo-document-picker": "^12.0.2",
     "expo-haptics": "~13.0.1",
