--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to allow you to share images in the chat.",
         "NSCameraUsageDescription": "This app needs access to your camera to allow you to take photos and share them in the chat.",
         "NSMicrophoneUsageDescription": "This app needs access to your microphone to allow you to record audio messages in the chat.",
-        "NSLocationWhenInUseUsageDescription": "This app needs access to your location to allow you to share your current location in the chat."
+        "NSLocationWhenInUseUsageDescription": "This app needs access to your location to allow you to share your current location in the chat.",
+        "ITSAppUsesNonExemptEncryption": false
       },
       "bundleIdentifier": "ma.fauconbleu.services"
     },
@@ -37,12 +38,12 @@
       "package": "ma.fauconbleu.services",
       "versionCode": "3",
       "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
-        "RECORD_AUDIO",
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION"
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ],
       "googleServicesFile": "./google-services.json",
       "dependencies": [
@@ -59,7 +60,6 @@
         {
           "photosPermission": "The app accesses your photos to let you share them in the chat.",
           "cameraPermission": "The app accesses your camera to let you take photos and share them in the chat."
-          
         }
       ],
       [
@@ -82,6 +82,14 @@
           "sounds": [
             "./assets/notification_sound.wav"
           ]
+        }
+      ]
+      ,[
+        "expo-build-properties",
+        {
+          "ios":{
+              "useFrameworks" : "static"
+          }
         }
       ]
     ],
