--- a/package.json
+++ b/package.json
@@ -9,61 +9,60 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/netinfo": "11.3.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-firebase/app": "^21.3.0",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.7",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-firebase/app": "^22.0.0",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/bottom-tabs": "^6.5.18",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.39",
-    "expo-av": "^14.0.7",
-    "expo-device": "~6.0.2",
-    "expo-document-picker": "^12.0.2",
-    "expo-haptics": "~13.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-localization": "~15.0.3",
-    "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.19",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "i18n-js": "^4.4.3",
-    "laravel-echo": "^1.16.1",
-    "lottie-react-native": "6.7.0",
-    "mapbox-gl": "^2.15.0",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.4",
+    "expo-build-properties": "~0.14.6",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "^14.1.4",
+    "expo-localization": "^16.1.5",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.2",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "i18n-js": "^4.5.1",
+    "laravel-echo": "^2.1.4",
+    "lottie-react-native": "^7.2.2",
+    "metro": "^0.82.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "18.2.0",
-    "react-i18next": "^15.0.3",
-    "react-native": "0.74.5",
-    "react-native-blob-util": "^0.21.1",
+    "react": "^19.0.0",
+    "react-i18next": "^15.5.1",
+    "react-native": "^0.79.2",
+    "react-native-blob-util": "^0.21.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-svg": "^15.2.0",
-    "react-native-toast-message": "^2.2.1",
-    "react-native-webview": "13.8.6",
-    "victory-native": "^37.3.3",
-    "expo-build-properties": "~0.12.5"
+    "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.0",
+    "react-native-webview": "13.13.5",
+    "victory-native": "^37.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/leaflet": "^1.9.14",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.72.8",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.21.0",
+    "@types/leaflet": "^1.9.4",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
