--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "lottie-react-native": "^7.2.2",
     "metro": "^0.82.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-i18next": "^15.5.1",
     "react-native": "^0.79.2",
     "react-native-blob-util": "^0.21.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
@@ -61,8 +62,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@types/leaflet": "^1.9.4",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
